--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,27 +5,27 @@ server:
     encoding:
       charset: utf-8
       enabled: true
-    
+
 spring:
   mvc:
     view:
       prefix: /WEB-INF/views/
       suffix: .jsp
-      
+
   datasource:
-    url: jdbc:h2:mem:test;MODE=MySQL
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-    
+    url: jdbc:mysql://localhost:3306/new_insta?serverTimezone=Asia/Seoul
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: new_insta
+    password: 1234
+
   jpa:
     open-in-view: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update #Create, update, none
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
-      
+
   servlet:
     multipart:
       enabled: true
@@ -34,7 +34,7 @@ spring:
   security:
     user:
       name: test
-      password: 1234   
+      password: 1234
 
-#file:
-#  path: C:/workspace/springbootwork/upload/
+file:
+  path: C:/workspace/springbootwork/upload/
