--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8000
   servlet:
     context-path: /
     encoding:
@@ -35,6 +35,19 @@ spring:
     user:
       name: test
       password: 1234
+    oauth2:
+      client:
+        registration:
+          facebook:
+            client-id: 387833254211507
+            client-secret: 946a76bb3727eaee790f76b5d54c6ca0
+            scope:
+              - public_profile
+              - email
+
+  profiles:
+    include: oauth
+
 
 file:
   path: C:/workspace/springbootwork/upload/
